Filter Quality, Clamp Glossy and Cubemap size aren't working on Lookdev HDRIs #63198

Closed
opened 2019-04-01 21:48:35 +02:00 by msalv · 3 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.71

Blender Version
Broken: version: 2.80 (sub 53), branch: blender2.7, commit date: 2019-03-31 21:52, hash: b936d7b16c
Worked: (optional)

Short description of error
Changing the filter quality, clamp glossy or the cubemap resolution on Eevee's indirect lighting panel doesn't change anything on the reflected cubemaps that belong to lookdev. It does work with the world's or baked cubemaps though. Also, reopening the file updates the hdris

Exact steps for others to reproduce the error
Open the file, set shading to lookdev. Change cubemap size, clamp glossy or filter quality in the Indirect lighting panel under the Eevee's render properties.

Change shading to rendered and tweak the same values to compare functionality
bug15.blend
(I'll also sneak a request and ask for the filter quality limit to be higher than 8, or a soft limit, thanks ❤)

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.71 **Blender Version** Broken: version: 2.80 (sub 53), branch: blender2.7, commit date: 2019-03-31 21:52, hash: `b936d7b16c` Worked: (optional) **Short description of error** Changing the filter quality, clamp glossy or the cubemap resolution on Eevee's indirect lighting panel doesn't change anything on the reflected cubemaps that belong to lookdev. It does work with the world's or baked cubemaps though. Also, reopening the file updates the hdris **Exact steps for others to reproduce the error** Open the file, set shading to lookdev. Change cubemap size, clamp glossy or filter quality in the Indirect lighting panel under the Eevee's render properties. Change shading to rendered and tweak the same values to compare functionality [bug15.blend](https://archive.blender.org/developer/F6905911/bug15.blend) (I'll also sneak a request and ask for the filter quality limit to be higher than 8, or a soft limit, thanks ❤)
Author

Added subscriber: @moisessalvador

Added subscriber: @moisessalvador
Clément Foucault was assigned by Sebastian Parborg 2019-04-02 11:34:07 +02:00

This issue was referenced by c2f3ba64ce

This issue was referenced by c2f3ba64ce3b7cb0dd0498b708471b6470c589a6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63198
No description provided.